💫Include 3rd party license and create storage module

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,3 +1,7 @@
 name: ${plugin_name}
 version: ${plugin_version}
 main: ${plugin_main_path}
+authors: [DarcJC]
+api-version: 1.17
+website: https://cake.darc.icu
+
