--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -29,3 +29,8 @@ jobs:
             build/libs/*.jar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Push to Package
+        run: ./gradlew publish
+        env:
+          TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          USERNAME: github-action
